# datolite

./: .gitignore  README.md  pyproject.toml  requirements.txt  root.dls  test.py
datolite/: __init__.py  __main__.py
datolite/assembler/: assembler.py
datolite/disassembler/: __init__.py  disas.py
datolite/logger/: logger.py
datolite/parser/: parser.py
datolite/patcher/: __init__.py  patcher.py
testing/: message.txt  patched.test  stringPatch.dpt  test  test.c
testing/patches/: combined.dpt  csrcPatch.dpt  fnPatch.dpt  patch.c  stringPatch.dpt
